--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BillJobsCateringTask2</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+ 
+  <title>Bill Jobs Catering Task2</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
